Working interception.